--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,7 @@ engines:
   brakeman:
     enabled: true
   bundler-audit:
-    enabled: false
+    enabled: true
   csslint:
     enabled: true
   duplication:
